src/test/ui/feature-gates/feature-gate-ffi_pure.stderr
error[E0658]: the `#[ffi_pure]` attribute is an experimental feature (see issue #58314)
  --> $DIR/feature-gate-ffi_pure.rs:5:5
   |
LL |     #[ffi_pure] //~ ERROR the `#[ffi_pure]` attribute is an experimental feature (see issue #58314)
   |     ^^^^^^^^^^^
   |
   = help: add #![feature(ffi_pure)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
